# rpcpoc

./: README.rst  requirements.txt  setup.cfg
deepsixPOC/: main.py
deepsixPOC/dse/: d6cage.py  deepsix.py
deepsixPOC/services/: service_a.py  service_b.py
