[metadata]
name = deepsixPOC
summary = common
author = Yingxin
classifier =
    Environment :: Yingxin
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    deepsixPOC

[pbr]
warnerrors = true

[wheel]
universal = 1
